fix bottonWrap issue

--- a/app/assets/style/pages/_course.scss
+++ b/app/assets/style/pages/_course.scss
@@ -1,5 +1,7 @@
 .buttonWrap {
+  overflow-x: scroll;
   .btn{
+    // display: inline-block;
     border-radius: 8px;
     transition: all .3s ease 0s;
     &:hover{
@@ -11,7 +13,7 @@
 }
 
 .courseList {
-  li {
+  li > div{
     border-radius: 24px;
   }
   &__icon {
